--- a/course/templates/course/contact.html
+++ b/course/templates/course/contact.html
@@ -98,7 +98,7 @@
 		{{ field.errors }}
 		{{ field.label_tag }}	{{ field }}
 		{% if field.help_text %}
-			<p class="htlp"> {{ field.help_text|safe }}</p>
+			<p class="help"> {{ field.help_text|safe }}</p>
 		{% endif %}
 	<div>
 {% endfor %}
